--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -124,3 +124,13 @@ ion-item {
 ion-searchbar input {
   --border-radius: 35px;
 }
+
+.fullheight {
+  height: 100%;
+}
+
+.xc {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
