feat: done all pages (profile, login)

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -195,3 +195,7 @@ ion-textarea.custom-1 {
 .item-label-floating .sc-ion-input-ios-h {
   --padding-start: 8px;
 }
+
+hr.solid {
+  border-top: 1px solid #bbb;
+}
